[tool.poetry]
name = "video-segmentation-ng"
version = "1.0.0"
description = ""
authors = ["Omkar Mujgond <oms.mails@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.10"

[tool.poetry.dev-dependencies]
keras = "2.4.3"
tensorflow = "2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
